; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/smartpqi/extr_smartpqi_discovery.c_pqisrc_get_device_raidmap.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/smartpqi/extr_smartpqi_discovery.c_pqisrc_get_device_raidmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32 }

@PQI_STATUS_SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"IN\0A\00", align 1
@PQI_STATUS_FAILURE = common dso_local global i32 0, align 4
@SA_GET_RAID_MAP = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [37 x i8] c"error in build send raid req ret=%d\0A\00", align 1
@.str.2 = private unnamed_addr constant [37 x i8] c"error in raid map validation ret=%d\0A\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"OUT\0A\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"FAILED \0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_4__*)* @pqisrc_get_device_raidmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pqisrc_get_device_raidmap(i32* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  %9 = load i32, i32* @PQI_STATUS_SUCCESS, align 4
  store i32 %9, i32* %6, align 4
  %10 = call i32 @DBG_FUNC(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %11 = load i32*, i32** %4, align 8
  %12 = call i32* @os_mem_alloc(i32* %11, i32 4)
  store i32* %12, i32** %8, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %2
  %16 = load i32, i32* @PQI_STATUS_FAILURE, align 4
  store i32 %16, i32* %3, align 4
  br label %53

17:                                               ; preds = %2
  %18 = call i32 @memset(i32* %7, i32 0, i32 4)
  %19 = load i32*, i32** %4, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* @SA_GET_RAID_MAP, align 4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @pqisrc_build_send_raid_request(i32* %19, i32* %7, i32* %20, i32 4, i32 %21, i32 0, i32 %24, i32* null)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %6, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %17
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @DBG_ERR(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i32 %29)
  br label %46

31:                                               ; preds = %17
  %32 = load i32*, i32** %4, align 8
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %34 = load i32*, i32** %8, align 8
  %35 = call i32 @pqisrc_raid_map_validation(i32* %32, %struct.TYPE_4__* %33, i32* %34)
  store i32 %35, i32* %6, align 4
  %36 = load i32, i32* %6, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %31
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @DBG_ERR(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.2, i64 0, i64 0), i32 %39)
  br label %46

41:                                               ; preds = %31
  %42 = load i32*, i32** %8, align 8
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 0
  store i32* %42, i32** %44, align 8
  %45 = call i32 @DBG_FUNC(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %53

46:                                               ; preds = %38, %28
  %47 = load i32*, i32** %4, align 8
  %48 = load i32*, i32** %8, align 8
  %49 = bitcast i32* %48 to i8*
  %50 = call i32 @os_mem_free(i32* %47, i8* %49, i32 4)
  %51 = call i32 @DBG_FUNC(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0))
  %52 = load i32, i32* %6, align 4
  store i32 %52, i32* %3, align 4
  br label %53

53:                                               ; preds = %46, %41, %15
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

declare dso_local i32 @DBG_FUNC(i8*) #1

declare dso_local i32* @os_mem_alloc(i32*, i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @pqisrc_build_send_raid_request(i32*, i32*, i32*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @DBG_ERR(i8*, i32) #1

declare dso_local i32 @pqisrc_raid_map_validation(i32*, %struct.TYPE_4__*, i32*) #1

declare dso_local i32 @os_mem_free(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
